#include "moving_object.hpp"

class NPC : public MovingObjects {};