#include "enemy.hpp"

class Dummy : public Enemy {
public:
    Dummy(int x, int y);
};