#include "moving_object.hpp"

class Enemy : public MovingObjects {};