#include "stable_object.hpp"

class Ground : public StableObject {
public:
    Ground(int x, int y);
};