#include "stable_object.hpp"

class Rope : public StableObject {
public:
    Rope(int x, int y);
};