classDiagram
    GameMap .. Object
    GameMap : - objects[]
    Object : + void handle_collision()
    Object : # int x
    Object : # int y
    Object <-- StableObject
    Object <-- MovingObject
    Object : # sprite
    MovingObject <-- Playable
    MovingObject <-- NPC
    MovingObject : # double vx
    MovingObject : # double vy
    MovingObject : # double ay
    MovingObject : + void handle_edge()
    NPC <-- Turtlack
    StableObject <-- Wall
    StableObject <-- Ground
    StableObject <-- TurningBlock
    NPC <-- Enemy
    Enemy <-- Shielded
    Enemy <-- Dummy
    Display <-- Menu
    Display <-- Gameplay
    Display <-- Settings
    Display <-- Credits
    Display <-- PauseMenu
    Display <-- LoadingScreen
    Display : + void render()
    Level .. GameMap
    Level : + void start()
    Level : + void terminate()
    Level : - score
    Object : + void draw()
    GameMap : + void notify_collosion()
    GameMap : + void notify_fall()
    MovingObject : + void handle_fall()
    Level : - map*
    Gameplay .. GameMap
    Gameplay : - current_map*
    Universe .. Level
    Universe: - levels[]
    Universe: - settings
    Universe .. Display
    Universe: - displays[]
    Display: + void tick()
    Display: + void handle_event(window, universe*)
    Display .. MenuItem
    Display: - items[]
    Universe: - current_display
    StableObject <-- Star
    StableObject <-- Diamond
    NPC <-- MovableBlock
    StableObject <-- Ladder
    StableObject <-- Rope
    Display <-- GameOver
    GameOver : - STATUS
    StableObject <-- Trap
    Display <-- LevelSelect